[gd_scene load_steps=4 format=3 uid="uid://75rlsuvfavmv"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_ulnxf"]
[ext_resource type="FontFile" uid="uid://dcauamcrusea8" path="res://assets/etc/StarlightRune.ttf" id="2_dlik1"]

[sub_resource type="LabelSettings" id="LabelSettings_jillg"]
font = ExtResource("2_dlik1")
font_size = 124

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ulnxf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 1032.0
offset_bottom = 595.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 230.0
offset_top = 102.0
offset_right = 768.0
offset_bottom = 240.0
text = "GAME PAUSED"
label_settings = SubResource("LabelSettings_jillg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 138.0
offset_top = 250.0
offset_right = 491.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 48
text = "RESUME"

[node name="Button2" type="Button" parent="Control"]
offset_left = 538.0
offset_top = 250.0
offset_right = 891.0
offset_bottom = 350.0
theme_override_font_sizes/font_size = 48
text = "RETRY"

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 321.0
offset_top = 390.0
offset_right = 674.0
offset_bottom = 483.0
theme_override_font_sizes/font_size = 48
text = "QUIT"
